@@ -34,8 +34,8 @@ public class FileLink implements ParamLayoutFormatter {
         LinkedFile link = null;
         if (fileType == null) {
             // No file type specified. Simply take the first link.
-            if (!(fileList.isEmpty())) {
-                link = fileList.get(0);
+            if (!fileList.isEmpty()) {
+                link = fileList.getFirst();
             }
         } else {
             // A file type is specified:
