@@ -24,7 +24,7 @@ public class OOFormat {
      *               The territory part is not only optional, the allowed "codes are vendor and browser-specific", so probably best to avoid them if possible.
      */
     public static OOText setLocale(OOText ootext, String locale) {
-        return OOText.fromString(String.format("<span lang=\"%s\">", locale) + ootext.toString() + "</span>");
+        return OOText.fromString("<span lang=\"%s\">".formatted(locale) + ootext.toString() + "</span>");
     }
 
     /**
@@ -42,7 +42,7 @@ public class OOFormat {
      * @param charStyle Name of a character style known to OO. May be empty for "Standard", which in turn means do not override any properties.
      */
     public static OOText setCharStyle(OOText ootext, String charStyle) {
-        return OOText.fromString(String.format("<span oo:CharStyleName=\"%s\">", charStyle)
+        return OOText.fromString("<span oo:CharStyleName=\"%s\">".formatted(charStyle)
                 + ootext.toString()
                 + "</span>");
     }
@@ -54,7 +54,7 @@ public class OOFormat {
         if (StringUtil.isNullOrEmpty(paraStyle)) {
             return paragraph(ootext);
         }
-        String startTag = String.format("<p oo:ParaStyleName=\"%s\">", paraStyle);
+        String startTag = "<p oo:ParaStyleName=\"%s\">".formatted(paraStyle);
         return OOText.fromString(startTag + ootext.toString() + "</p>");
     }
 
@@ -69,7 +69,7 @@ public class OOFormat {
      * Format an OO cross-reference showing the target's page number as label to a reference mark.
      */
     public static OOText formatReferenceToPageNumberOfReferenceMark(String referenceMarkName) {
-        String string = String.format("<oo:referenceToPageNumberOfReferenceMark target=\"%s\">", referenceMarkName);
+        String string = "<oo:referenceToPageNumberOfReferenceMark target=\"%s\">".formatted(referenceMarkName);
         return OOText.fromString(string);
     }
 }
