@@ -4,12 +4,12 @@ import java.io.IOException;
 import java.util.Collections;
 import java.util.EnumSet;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.jabref.architecture.AllowedToUseLogic;
 import org.jabref.gui.Globals;
-import org.jabref.logic.pdf.search.retrieval.PdfSearcher;
-import org.jabref.model.database.BibDatabaseContext;
+import org.jabref.logic.pdf.search.PdfIndexer;
+import org.jabref.logic.pdf.search.PdfIndexerManager;
+import org.jabref.logic.pdf.search.PdfSearcher;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.pdf.search.PdfSearchResults;
 import org.jabref.model.pdf.search.SearchResult;
@@ -30,16 +30,12 @@ public abstract class FullTextSearchRule implements SearchRule {
     protected final EnumSet<SearchRules.SearchFlags> searchFlags;
 
     protected String lastQuery;
-    protected List<SearchResult> lastSearchResults;
-
-    private final BibDatabaseContext databaseContext;
+    protected List<SearchResult> lastPdfSearchResults;
 
     public FullTextSearchRule(EnumSet<SearchRules.SearchFlags> searchFlags) {
         this.searchFlags = searchFlags;
         this.lastQuery = "";
-        lastSearchResults = Collections.emptyList();
-
-        databaseContext = Globals.stateManager.getActiveDatabase().orElse(null);
+        lastPdfSearchResults = Collections.emptyList();
     }
 
     public EnumSet<SearchRules.SearchFlags> getSearchFlags() {
@@ -48,24 +44,37 @@ public abstract class FullTextSearchRule implements SearchRule {
 
     @Override
     public PdfSearchResults getFulltextResults(String query, BibEntry bibEntry) {
-        if (!searchFlags.contains(SearchRules.SearchFlags.FULLTEXT) || databaseContext == null) {
+        if (!searchFlags.contains(SearchRules.SearchFlags.FULLTEXT)) {
+            LOGGER.debug("Fulltext search results called even though fulltext search flag is missing.");
             return new PdfSearchResults();
         }
 
-        if (!query.equals(this.lastQuery)) {
-            this.lastQuery = query;
-            lastSearchResults = Collections.emptyList();
+        if (query.equals(this.lastQuery)) {
+            LOGGER.trace("Reusing fulltext search results (query={}, lastQuery={}).", query, this.lastQuery);
+        } else {
+            LOGGER.trace("Performing full query {}.", query);
+            PdfIndexer pdfIndexer;
             try {
-                PdfSearcher searcher = PdfSearcher.of(databaseContext);
-                PdfSearchResults results = searcher.search(query, 5);
-                lastSearchResults = results.getSortedByScore();
+                pdfIndexer = PdfIndexerManager.getIndexer(Globals.stateManager.getActiveDatabase().get(), Globals.prefs.getFilePreferences());
             } catch (IOException e) {
-                LOGGER.error("Could not retrieve search results!", e);
+                LOGGER.error("Could not access full text index.", e);
+                return new PdfSearchResults();
+            }
+            this.lastQuery = query;
+            lastPdfSearchResults = Collections.emptyList();
+            try {
+                PdfSearcher searcher = PdfSearcher.of(pdfIndexer);
+                PdfSearchResults results = searcher.search(query, 5);
+                lastPdfSearchResults = results.getSortedByScore();
+            } catch (IOException e) {
+                LOGGER.error("Could not retrieve search results.", e);
+                return new PdfSearchResults();
             }
         }
 
-        return new PdfSearchResults(lastSearchResults.stream()
-                                                     .filter(searchResult -> searchResult.isResultFor(bibEntry))
-                                                     .collect(Collectors.toList()));
+        // We found a number of PDF files, now we need to relate it to the current BibEntry
+        return new PdfSearchResults(lastPdfSearchResults.stream()
+                                                        .filter(searchResult -> searchResult.isResultFor(bibEntry))
+                                                        .toList());
     }
 }
