@@ -6,7 +6,6 @@ import java.io.InputStream;
 import java.io.StringReader;
 import java.net.URISyntaxException;
 import java.nio.file.Path;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -23,6 +22,7 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.function.Executable;
 import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
 import org.junit.jupiter.params.provider.MethodSource;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -52,18 +52,18 @@ class MedlinePlainImporterTest {
     }
 
     @Test
-    void testsGetExtensions() {
+    void sGetExtensions() {
         assertEquals(StandardFileType.MEDLINE_PLAIN, importer.getFileType());
     }
 
     @Test
-    void testGetDescription() {
+    void getDescription() {
         assertEquals("Importer for the MedlinePlain format.", importer.getDescription());
     }
 
     @ParameterizedTest
     @MethodSource("fileNames")
-    void testIsRecognizedFormat(String fileName) throws Exception {
+    void isRecognizedFormat(String fileName) throws Exception {
         ImporterTestEngine.testIsRecognizedFormat(importer, fileName);
     }
 
@@ -73,12 +73,12 @@ class MedlinePlainImporterTest {
     }
 
     @Test
-    void testImportMultipleEntriesInSingleFile() throws IOException, URISyntaxException {
+    void importMultipleEntriesInSingleFile() throws IOException, URISyntaxException {
         Path inputFile = Path.of(MedlinePlainImporter.class.getResource("MedlinePlainImporterTestMultipleEntries.txt").toURI());
 
         List<BibEntry> entries = importer.importDatabase(inputFile).getDatabase()
                                          .getEntries();
-        BibEntry testEntry = entries.get(0);
+        BibEntry testEntry = entries.getFirst();
 
         assertEquals(7, entries.size());
         assertEquals(StandardEntryType.Article, testEntry.getType());
@@ -121,23 +121,23 @@ class MedlinePlainImporterTest {
     }
 
     @Test
-    void testEmptyFileImport() throws IOException {
+    void emptyFileImport() throws IOException {
         List<BibEntry> emptyEntries = importer.importDatabase(readerForString("")).getDatabase().getEntries();
-
         assertEquals(Collections.emptyList(), emptyEntries);
     }
 
-    @Test
-    void testImportSingleEntriesInSingleFiles() throws IOException, URISyntaxException {
-        List<String> testFiles = Arrays.asList("MedlinePlainImporterTestCompleteEntry",
-                "MedlinePlainImporterTestMultiAbstract", "MedlinePlainImporterTestMultiTitle",
-                "MedlinePlainImporterTestDOI", "MedlinePlainImporterTestInproceeding");
-
-        for (String testFile : testFiles) {
-            String medlineFile = testFile + ".txt";
-            String bibtexFile = testFile + ".bib";
-            assertImportOfMedlineFileEqualsBibtexFile(medlineFile, bibtexFile);
-        }
+    @ParameterizedTest
+    @CsvSource({
+            "MedlinePlainImporterTestCompleteEntry",
+            "MedlinePlainImporterTestMultiAbstract",
+            "MedlinePlainImporterTestMultiTitle",
+            "MedlinePlainImporterTestDOI",
+            "MedlinePlainImporterTestInproceeding"
+    })
+    void importSingleEntriesInSingleFiles(String testFile) throws IOException, URISyntaxException {
+        String medlineFile = testFile + ".txt";
+        String bibtexFile = testFile + ".bib";
+        assertImportOfMedlineFileEqualsBibtexFile(medlineFile, bibtexFile);
     }
 
     private void assertImportOfMedlineFileEqualsBibtexFile(String medlineFile, String bibtexFile)
@@ -147,13 +147,12 @@ class MedlinePlainImporterTest {
         try (InputStream nis = MedlinePlainImporter.class.getResourceAsStream(bibtexFile)) {
             List<BibEntry> entries = importer.importDatabase(file).getDatabase().getEntries();
             assertNotNull(entries);
-            assertEquals(1, entries.size());
-            BibEntryAssert.assertEquals(nis, entries.get(0));
+            BibEntryAssert.assertEquals(nis, entries);
         }
     }
 
     @Test
-    void testMultiLineComments() throws IOException {
+    void multiLineComments() throws IOException {
         try (BufferedReader reader = readerForString("PMID-22664220" + "\n" + "CON - Comment1" + "\n" + "CIN - Comment2"
                 + "\n" + "EIN - Comment3" + "\n" + "EFR - Comment4" + "\n" + "CRI - Comment5" + "\n" + "CRF - Comment6"
                 + "\n" + "PRIN- Comment7" + "\n" + "PROF- Comment8" + "\n" + "RPI - Comment9" + "\n" + "RPF - Comment10"
@@ -172,7 +171,7 @@ class MedlinePlainImporterTest {
     }
 
     @Test
-    void testKeyWords() throws IOException {
+    void keyWords() throws IOException {
         try (BufferedReader reader = readerForString("PMID-22664795" + "\n" + "MH  - Female" + "\n" + "OT  - Male")) {
             List<BibEntry> actualEntries = importer.importDatabase(reader).getDatabase().getEntries();
 
@@ -184,7 +183,7 @@ class MedlinePlainImporterTest {
     }
 
     @Test
-    void testWithNbibFile() throws IOException, URISyntaxException {
+    void withNbibFile() throws IOException, URISyntaxException {
         Path file = Path.of(MedlinePlainImporter.class.getResource("NbibImporterTest.nbib").toURI());
 
         List<BibEntry> entries = importer.importDatabase(file).getDatabase().getEntries();
@@ -193,7 +192,7 @@ class MedlinePlainImporterTest {
     }
 
     @Test
-    void testWithMultipleEntries() throws IOException, URISyntaxException {
+    void withMultipleEntries() throws IOException, URISyntaxException {
         Path file = Path.of(MedlinePlainImporter.class.getResource("MedlinePlainImporterStringOutOfBounds.txt").toURI());
 
         List<BibEntry> entries = importer.importDatabase(file).getDatabase().getEntries();
@@ -202,7 +201,7 @@ class MedlinePlainImporterTest {
     }
 
     @Test
-    void testInvalidFormat() throws URISyntaxException, IOException {
+    void invalidFormat() throws URISyntaxException, IOException {
         Path file = Path.of(MedlinePlainImporter.class.getResource("MedlinePlainImporterTestInvalidFormat.xml").toURI());
 
         List<BibEntry> entries = importer.importDatabase(file).getDatabase().getEntries();
@@ -211,7 +210,7 @@ class MedlinePlainImporterTest {
     }
 
     @Test
-    void testNullReader() throws IOException {
+    void nullReader() throws IOException {
         Executable fail = () -> {
             try (BufferedReader reader = null) {
                 importer.importDatabase(reader);
@@ -221,7 +220,7 @@ class MedlinePlainImporterTest {
     }
 
     @Test
-    void testAllArticleTypes() throws IOException {
+    void allArticleTypes() throws IOException {
         try (BufferedReader reader = readerForString("PMID-22664795" + "\n" + "MH  - Female\n" + "PT  - journal article"
                 + "\n" + "PT  - classical article" + "\n" + "PT  - corrected and republished article" + "\n"
                 + "PT  - introductory journal article" + "\n" + "PT  - newspaper article")) {
@@ -236,12 +235,12 @@ class MedlinePlainImporterTest {
     }
 
     @Test
-    void testGetFormatName() {
+    void getFormatName() {
         assertEquals("Medline/PubMed Plain", importer.getName());
     }
 
     @Test
-    void testGetCLIId() {
+    void getCLIId() {
         assertEquals("medlineplain", importer.getId());
     }
 }
